ChangeLog

Upcoming version 7
[!!!]     This version drops support for TYPO3 12
[!!!]     Clear the caches after updating because there were updates in injected dependencies
[TASK]    Mark as compatible with TYPO3 13 and 14
[TASK]    Remove outdated Page TSconfig for TYPO3 12 compatibility
[TASK]    Replace `File::FILETYPE_IMAGE` with `FileType::IMAGE->value`
[TASK]    Use `RenderingContext` attributes for retrieving `ServerRequestInterface` in LinkViewHelper
[TASK]    Add `#[AsAllowedCallable]` attribute to plugin classes
[TASK]    Replace `$GLOBALS['TSFE']` usage with `request->getAttribute` calls
[TASK]    Remove deprecated `includeLLFile` call in BackendModuleController
[TASK]    Update Page TSconfig for ke_search table restrictions, deny index and filter option records
[TASK]    Replace `$GLOBALS['TSFE']->cObj`
[TASK]    Remove Typo3Version checks for TYPO3 < 13 compatibility
[TASK]    Add comments for TYPO3 14 migration and deprecations
[TASK]    Refactor plugin registration and FlexForm handling
[TASK]    Fix size calculation to prevent index out-of-range error in function formatFileSize
[TASK]    Refactor `splitPdfInfo` method to improve type safety and readability
[TASK]    Simplify file indexability check in `IndexerBase`
[TASK]    Replace `send` method of MailMessage with `MailerInterface->send`
[TASK]    Suppress PHPStan errors in `IndexerRunner` for compatibility reasons
[TASK]    Simplify checks in `File.php`
[TASK]    Simplify checks across multiple classes
[TASK]    Update CI workflow to include PHP 8.4, 8.5 and TYPO3 14 support

Version 6.6.0, 6 November 2025
[!!!]     This version changes the database structure.
[FEATURE] Allow File Collections to be indexed. Thanks to Mike Street. https://github.com/tpwd/ke_search/pull/301
[FEATURE] Make inline script CSP-compatible. Tanks to Marco Ziesing. https://github.com/tpwd/ke_search/pull/305