@@ -1,436 +1,78 @@
-.tx-kesearch-pi1 {
-    font-family: Sans-Serif;
-}
-
-/* Clearer */
-.tx-kesearch-pi1 .clearer {
-    display: block;
-    height: 1px;
-    line-height: 1px;
-    clear: both;
-}
-
-/* formElements */
-.tx-kesearch-pi1 form{
-    border: 0 none;
-    margin: 0 0 20px 0;
-}
-.tx-kesearch-pi1 form fieldset{
-	margin:0;
-	padding:0;
-}
-.tx-kesearch-pi1 .kesearch_searchbox {
-	border:none;
-}
-.tx-kesearch-pi1 input[type="search"],
+.tx-kesearch-pi1,
+.tx-kesearch-pi1 input,
 .tx-kesearch-pi1 select,
-.tx-kesearch-pi1 textarea{
-    padding: 0.3em 0.3em 0.3em 0.4em;
-    background: white;
-    border: 1px solid #bbbbbb;
-    -webkit-border-radius: 2px;
-    -moz-border-radius: 2px;
-    border-radius: 2px;
-    color: #2b2b2b;
-}
-.tx-kesearch-pi1 input[type="search"]:focus,
-.tx-kesearch-pi1 input[type="search"]:hover,
-.tx-kesearch-pi1 select:focus,
-.tx-kesearch-pi1 select:hover,
-.tx-kesearch-pi1 textarea:focus,
-.tx-kesearch-pi1 textarea:hover{
-    box-shadow: 0 0 3px #bbbbbb;
-    border: 1px solid #b2b2b2;
-    color: #000;
-}
+.tx-kesearch-pi1 button { font: inherit; }
+.tx-kesearch-pi1 .clearer { display: block; height: 1px; line-height: 1px; clear: both; }
+.tx-kesearch-pi1 form { margin-bottom: 1em; }
+.tx-kesearch-pi1 form fieldset { margin: 0; padding: 0; }
+.tx-kesearch-pi1 .kesearch_searchbox { border: none; }
+.tx-kesearch-pi1 input[type="search"],
+.tx-kesearch-pi1 select { background: #fff; border: 1px solid #bbb; border-radius: 2px; color: #2b2b2b; }
 
 /* Buttons */
 a.kesGreyButt,
 span.resetbutt a,
-span.submitbutt input,
-input.kesGreyButt,
-span.kesGreyButt{
-    font-size:1em;
-    font-family: Sans-Serif;
-    padding: 5px 10px;
-    margin: 0 10px 10px 0;
-	display: block;
+span.submitbutt input {
+    padding: 0.5em 3em;
+    margin: 0 0.5em 0.5em 0;
+    display: block;
     cursor: pointer;
-	min-width:70px;
-	max-width:140px;
-    -moz-user-select: none;
-    background-color: #f5f5f5;
-    background-image: -moz-linear-gradient(center top , #f6f6f6, #f0f0f0);
-    border: 1px solid rgba(0, 0, 0, 0.1);
+    user-select: none;
+    background: #f5f5f5;
+    border: 1px solid rgba(0,0,0,.1);
     border-radius: 2px;
     color: #444;
     text-align: center;
     text-decoration: none;
 }
-
-/* fix firefox button size (line-height is not working in firefox submit button)*/
-input::-moz-focus-inner {
-	border: 0;
-	padding: 0;
-}
-li.checkboxButtonSubmit span,
-span.submitbutt input,
-input.kesGreyButt[type="submit"]{
-	min-width:169px;
-	max-width:220px;
-}
-
-span.resetbutt {
-	float:left;
-}
-
+span.resetbutt { float: left; }
 span.resetbutt a:hover,
 span.submitbutt input:hover,
-input.kesGreyButt:hover,
-span.kesGreyButt:hover{
-    text-decoration: none;
-    cursor: pointer;
-	background-color: #f8f8f8;
-    background-image: -moz-linear-gradient(center top , #f8f8f8, #f1f1f1);
-    border: 1px solid #c6c6c6;
-    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
-    color: #222;
-}
-span.kesGreyButt a{
-    text-decoration: none;
-    color:#444;
-    text-shadow: 0px 1px 0px #ffffff;
-}
-span.kesGreyButt a:hover{
-    text-decoration: none;
-    color:#000;
-    text-shadow: 0px -1px 0px #ffffff;
-}
-/* buttFixes */
-#kesearch_filters .list li.checkboxButton,
-#kesearch_filters .list li.checkboxButtonSubmit{
-    text-decoration: none !important;
-    padding-bottom: 5px;
-}
-#kesearch_filters .list li.checkboxButtonSubmit{ margin-bottom: 1px;}
-#kesearch_filters .list li.checkboxButtonSubmit{ padding-bottom: 0;}
-
-/* SearchBox */
-div.kesearchbox{
-    position: relative;
-    height: 35px;
-    margin: 0 0 10px 0;
-}
-#ke_search_sword {
-    position: absolute;
-    top: 1px;
-    width: 220px;
-    height: auto;
-    padding: 8px 40px 7px 9px;
-    margin: 0;
-    display: inline;
-}
-#kesearch_submit{
-    position: absolute;
-    top: 3px;
-    left: 237px;
-    height: 28px;
-    width: 28px;
-    border: 0 none;
-    padding: 0;
-}
-#kesearch_submit:focus,
-#kesearch_submit:hover{
-    box-shadow: 0 0 0 white;
-    border: 0 none;
-    cursor: pointer;
-}
+a.kesGreyButt:hover { background: #f8f8f8; }
 
 /* Filters */
-#kesearch_filters select {
-    margin: 0 0 10px 0;
-}
-#kesearch_filters .list {
-    border: 1px solid #cfcfcf;
-    margin-bottom: 10px;
-}
-#kesearch_filters .list .head {
-    display:block;
-    border-bottom: 1px solid #CFCFCF;
-    padding: 5px;
-}
-#kesearch_filters .list ul {
-    padding: 10px;
-    margin: 0;
-    list-style-type:none;
-}
-#kesearch_filters .list ul.expanded { display:block; }
-#kesearch_filters .list ul.closed { display:none; }
-#kesearch_filters .list li {
-    display:block;
-    list-style-type:none;
-    margin:0 0 10px 0;
-    line-height:16px;
-    color: #444;
-}
-#kesearch_filters .list li a{
-    color: #444;
-}
-#kesearch_filters .list a.kesGreyButt {
-   margin-left: 10px;
-}
-#kesearch_filters .list li:hover,
-#kesearch_filters .list li a:hover{
-    text-decoration: none;
-    color: #444;
-    cursor: pointer;
-}
+#kesearch_filters select { margin: 0 0 10px; padding: 0.5em; }
+#kesearch_filters .list { border: 1px solid #cfcfcf; margin: 0 0 0.5em; padding: 0.5em; width: 20em; }
+#kesearch_filters .list .head { display: block; border-bottom: 1px solid #cfcfcf; padding: 0.5em 0 0.5em 0; }
+#kesearch_filters .list ul { padding: 0; margin: 0.5em 0 0.5em 0; list-style: none; }
+#kesearch_filters .list li { display: block; list-style: none; margin: 0 0 0.5em; line-height: .75em; color: #444; }
+#kesearch_filters .list li a { color: #444; }
 #kesearch_filters .list li.selected { font-weight: bold; }
-#kesearch_filters .list li.parent0,
-#kesearch_filters .list li.level0 { margin-left: 14px; }
-#kesearch_filters .list li.parent1,
-#kesearch_filters .list li.level1 { margin-left: 21px; }
-#kesearch_filters .list li.parent2,
-#kesearch_filters .list li.level2 { margin-left: 28px; }
-#kesearch_filters .list li.parent3,
-#kesearch_filters .list li.level3 { margin-left: 35px; }
-#kesearch_filters .list li.parent0,
-#kesearch_filters .list li.parent1,
-#kesearch_filters .list li.parent2,
-#kesearch_filters .list li.parent3 {
-    font-weight: bold;
-    list-style-position: outside;
-}
+#kesearch_filters .list li.optionCheckBox { float: left; width: 20em; margin-bottom: 0.25em; }
+#kesearch_filters .list li.optionCheckBox input[type="checkbox"] { float: left; margin: 0 0.25em 0 0; }
+#kesearch_filters .list li.clearer { font-size: 0; line-height: 0; float: none; margin: 0 !important; }
+#kesearch_filters label { display: block; font-weight: bold; margin: 0 0 0.25em; }
 
-/* Checkboxes */
-#kesearch_filters .list ul.checkboxList{ padding-bottom: 1px; }
-#kesearch_filters .list li.optionCheckBox {
-    float: left;
-    width: 200px;
-    text-decoration: none;
-    margin-bottom: 4px;
-}
-#kesearch_filters .list li.optionCheckBox input[type="checkbox"]{
-    float: left;
-    margin: 0 5px 0 0;
-}
-#kesearch_filters .list li.clearer {
-    font-size: 0;
-    line-height: 0;
-    float: none;
-    margin: 0 !important;
-}
-#kesearch_filters label{
-    display:block;
-    font-weight:bold;
-    color: #353535;
-    margin:0 0 4px 0;
-}
-#kesearch_filters .list li.region {
-    font-weight: bold;
-    margin-top: 5px;
-}
-#kesearch_filters .list li.noclick { cursor: default !important; }
-#kesearch_filters .list li.country { margin-left: 7px; }
-
-/* SPECIAL CSS CLASS */
-#kesearch_filters .small {
-    display:block;
-    height: 65px;
-    max-height: 65px;
-    overflow-y: auto;
-    overflow-x: hidden;
-}
-#kesearch_filters .larger {
-    display:block;
-    height: 130px;
-    max-height: 130px;
-    overflow-y: auto;
-    overflow-x: hidden;
-}
+/* Search box */
+div.kesearchbox { margin-bottom: .5em; }
+#ke_search_sword { padding: 0.5em; }
+.tx-kesearch-pi1 .general-message { padding: 0.25em; }
+.tx-kesearch-pi1 .general-message .image { float: left; vertical-align: middle; margin-right: 0.5em; }
 
 /* Results */
-#kesearch_num_results{
-	color:#898989;
-	float:left;
-}
-
-#kesearch_results .result-list-item{
-	clear:both;
-    margin: 20px 0 30px 0;
-    padding: 0;
-}
+#kesearch_results .result-list-item { clear: both; margin: 1em 0 1.5em; padding: 0; }
 #kesearch_results .result-list-item .result-number,
-#kesearch_results .result-list-item .result-title {
-	font-size:1.2em;
-}
-#kesearch_results {
-	clear:both;
-	margin-top:20px;
-}
-#kesearch_results .result-list-item .result-teaser {
-	color:#707070;
-}
-.tx-kesearch-pi1 #kesearch_results .result-list-item-type-page { }
-
-.tx-kesearch-pi1 #kesearch_results .teaser_icon img {
-    float:left;
-    margin-top:2px;
-    margin-right:5px;
-}
-
-.tx-kesearch-pi1 #kesearch_results .result-list-item .hit {
-    color: red;
-    font-weight: bold;
-}
-.tx-kesearch-pi1 #kesearch_results .result-list-item .add-info {
-}
-.tx-kesearch-pi1 #kesearch_results .result-list-item .scoreBar {
-    border: 1px solid #D3D3D3;
-    display: block;
-    float: right;
-    height: 10px;
-    width: 48px;
-}
-.tx-kesearch-pi1 #kesearch_results .result-list-item .scoreBar .score {
-    background-color: #D3D3D3;
-    border: 1px solid #898989;
-    display: block;
-    height: 10px;
-    margin: -1px 0 0 -1px;
-}
-
-/* Query time */
-.tx-kesearch-pi1 #kesearch_query_time {
-    font-style: italic;
-    text-align: center;
-    font-size: 80%;
-}
-
-/* Searchbox */
-.tx-kesearch-pi1 .searchbox {
-    margin-bottom: 5px;
-}
-.tx-kesearch-pi1 .searchbox input {
-    margin-left: 0;
-    width: 145px;
-}
-.tx-kesearch-pi1 .searchbox input.submit {
-    width: 18px;
-    height: 18px;
-    border: none;
-    background: none;
-    vertical-align: middle;
-}
-.tx-kesearch-pi1 form.static .searchbox input.submit {
-    margin-top: -16px;
-}
-.tx-kesearch-pi1 form.ajax .searchbox input.submit {
-    margin-top: -4px;
-}
-.tx-kesearch-pi1 .searchbox .search_input {
-    float:left;
-    margin-right: 5px;
-}
-
-/* General Message */
-.tx-kesearch-pi1 .general-message {
-    padding: 5px;
-}
-.tx-kesearch-pi1 .general-message .image {
-    float:left;
-    vertical-align: middle;
-    margin-right: 10px;
-}
+#kesearch_results .result-list-item .result-title { font-size: 1.25em; }
+#kesearch_results .result-list-item .result-teaser { color: #707070; margin-top: 0.5em;}
+.tx-kesearch-pi1 #kesearch_results .teaser_icon img { float: left; margin-right: 0.5em; }
+.tx-kesearch-pi1 #kesearch_results .result-list-item .hit { color: red; font-weight: bold; }
+.tx-kesearch-pi1 #kesearch_query_time { text-align: center; font-size: .8em; }
 
 /* Pagebrowser */
-.kesearch_pagebrowser ul {
-    display: inline;
-    margin: 0;
-    padding: 0;
-    -webkit-margin-before: 0;
-    -webkit-margin-after: 0;
-    -webkit-margin-start: 0;
-    -webkit-margin-end: 0;
-    -webkit-padding-start: 0;
-}
-.kesearch_pagebrowser ul li {
-    list-style-type: none;
-    display: inline-block;
-    margin: 0;
-}
-#kesearch_pagebrowser_top,
-#kesearch_pagebrowser_bottom {
-    text-align: center;
-    word-wrap: break-word;
-    color:#707070;
-}
+.kesearch_pagebrowser ul { display: inline; margin: 0; padding: 0; }
+.kesearch_pagebrowser ul li { list-style: none; display: inline-block; margin: 0; }
+#kesearch_pagebrowser_top, #kesearch_pagebrowser_bottom { text-align: center; word-wrap: break-word; }
 #kesearch_pagebrowser_top .pages_total,
-#kesearch_pagebrowser_bottom .pages_total{
-    padding: 8px 0;
-    background:#fff;
-    margin-bottom: 15px;
-}
-#kesearch_pagebrowser_top .pages_total { border-bottom: 1px solid #cccccc; }
-#kesearch_pagebrowser_bottom .pages_total { border-top: 1px solid #cccccc; }
-#kesearch_pagebrowser_top div.result_txt,
-#kesearch_pagebrowser_bottom div.result_txt{
-    margin: 0 0 5px 0;
-}
-#kesearch_pagebrowser_top .kesearch_pagebrowser,
-#kesearch_pagebrowser_bottom .kesearch_pagebrowser { margin: 0 auto 0; }
-
-#kesearch_pagebrowser_top a,
-#kesearch_pagebrowser_bottom a { padding: 3px; }
-#kesearch_pagebrowser_top a:hover,
-#kesearch_pagebrowser_bottom a:hover { cursor:pointer; }
-#kesearch_pagebrowser_top a.current,
-#kesearch_pagebrowser_bottom  a.current {
-   font-weight: bold;
-   color:#000;
-   text-decoration:none;
-}
-#kesearch_pagebrowser_top .browser,
-#kesearch_pagebrowser_bottom .browser{
-    border:1px solid;
-}
+#kesearch_pagebrowser_bottom .pages_total { padding: 0.5em 0; margin-bottom: 1em; border-top: 1px solid #ccc; border-bottom: 1px solid #ccc; }
+.kesearch_pagebrowser .active .page-link,
+.kesearch_pagebrowser .pagination a { padding: 0.5em; }
 
 /* Ordering */
-.tx-kesearch-pi1 #kesearch_ordering span.down {
-    display: inline-block;
-    width: 0;
-    height: 0;
-    border-color: #FF0000 transparent;
-    border-style: solid solid none;
-    border-width: 4px 4px 0;
-}
-.tx-kesearch-pi1 #kesearch_ordering span.up {
-    display: inline-block;
-    width: 0;
-    height: 0;
-    border-color: transparent transparent #FF0000;
-    border-style: none solid solid;
-    border-width: 0 4px 4px;
-}
-.tx-kesearch-pi1 #kesearch_ordering div.ordering {
-	float:right;
-	max-width:300px;
-}
-.tx-kesearch-pi1 #kesearch_ordering ul {
-    display: inline-block;
-    height: 20px;
-    list-style-type: none;
-    margin: 0 0 10px;
-    padding: 0;
-}
-.tx-kesearch-pi1 #kesearch_ordering ul li {
-    float: left;
-    margin-right: 10px;
-}
-.tx-kesearch-pi1 #kesearch_ordering div.clearer {
-    clear: left;
-}
-/* needed for autocomplete */
-ul.ui-autocomplete li a {
-	font-size: 12px;
-}
+.tx-kesearch-pi1 #kesearch_ordering span.down,
+.tx-kesearch-pi1 #kesearch_ordering span.up { display: inline-block; width: 0; height: 0; }
+.tx-kesearch-pi1 #kesearch_ordering span.down { border-color: #f00 transparent; border-style: solid solid none; border-width: 0.25em 0.25em 0; }
+.tx-kesearch-pi1 #kesearch_ordering span.up { border-color: transparent transparent #f00; border-style: none solid solid; border-width: 0 0.25em 0.25em; }
+.tx-kesearch-pi1 #kesearch_ordering .ordering { float: right; }
+.tx-kesearch-pi1 #kesearch_ordering ul { display: inline-block; list-style: none; }
+.tx-kesearch-pi1 #kesearch_ordering ul li { float: left; margin-right: 0.5em; }
+.tx-kesearch-pi1 #kesearch_ordering .clearer { clear: left; }
